added new transition density images.

--- a/main.tex
+++ b/main.tex
@@ -663,12 +663,12 @@ of the density at their position. Shown are the atom critical points (3, -3) (cy
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=7cm, height=7cm]{pyrene_520nm.png}
-\includegraphics[width=7cm, height=7cm]{ps_pyrene_520nm.png}
+\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ref_white}
+\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ps_white}
 
 \vspace{5mm}
-\includegraphics[width=7cm, height=7cm]{pyrene_2nd_peak.png}
-\includegraphics[width=7cm, height=7cm]{ps_pyrene_2nd_peak.png}
+\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ref_white}
+\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ps_white}
 \end{center}
 \caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each case, the electron is excited from the molecular orbital displayed in blue, to the orbital displayed in red.}
 \label{fig:transitiondensities}
