--- a/main.tex
+++ b/main.tex
@@ -297,23 +297,20 @@ appears.
 
 Encouraged by the fact that low-lying first excited states as well as the ionisation potentials of a large range of PAHs are 
 well reproduced by our pseudo-potentials,
-we decided to explore the virtual space further by computing the 20 first singlet
+we decided to explore the virtual space further by computing the 20 first singlet and 20 first triplet 
 $\pi$ excited states, and to compare the results to all-electron calculations using the PBE0 functional.
-Absorption spectra are shown in Figure~\ref{fig:cnhn_uv}, which pseudo-potential and all-electron
-calculations for a selection of PAH.
+Singlet and triplet spectra are shown in Figure~\ref{fig:cnhn_uv}, which compares the absorption spectra of pseudo-potential and all-electron calculations for a selection of PAH.
 As the pseudo-potential contains only $\pi$ orbitals, the excitations in the reference
 calculation which involve excitation from $\sigma$ to $\sigma$ orbitals cannot be reproduced 
 (these are denoted by a * above the peaks in the graphs).
 The overall agreement is very satisfactory.
-Excitation energies computed with the pseudo-potential are systematically lower a red shift of
-0.91 was used on the computed energies to match the reference spectra for the singlet.
+Excitation energies computed with the pseudo-potential are systematically lower: by 10\%
+for the singlet and by a very small amount for the triplet.
 This is a very pleasing surprise owing to the fact that the pseudo-potentials used
 to obtain these results were extracted on the first excited state of ethylene.
 Furthermore, the analysis of the transition densities show that the physics of the excitations
 is reproduced as well (see Figure~\ref{fig:transitiondensities} and Table~\ref{tab:coef}).
 The most remarkable feature to us is the neatness of the agreement of the excitation intensities in both singlet and triplet cases, both between peaks of the same molecule and also between molecules.
-The same analysis done on the triplet excited states is available in the SI, which leads to the same
-excellent agreement.
 This certainly shows again that the pseudo-carbon we have extracted captures a lot of the physics of the reference system as the intensities are related to the transition dipole moment.
 
 %These results show that the pseudo-potentials that we have extracted are able to reproduce the $\pi$ systems in a variety of situations which are not part of their extraction set.
@@ -323,7 +320,7 @@ This certainly shows again that the pseudo-carbon we have extracted captures a l
 %physically grounded.
  
 \subsection*{\sffamily \large Topological analysis of the density}
-A Bader analysis can be performed on the electronic density obtained with the pseudo-potentials.\cite{bader}
+A Bader analysis can be performed on the electronic density obtained with the pseudo-potentials.\cite{AIM}
 This gives a vision of the $\pi$-only electronic cloud.
 In the AIM framework, critical points are characterised by the sign of the eigenvalues of the hessian of 
 the electronic density and are classified as follows:
@@ -640,14 +637,13 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 6
 \begin{center}
-\includegraphics[width=16cm]{grand_rpa_singlet}
+\includegraphics[width=16cm]{grand_rpa}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
 \caption{Comparison of the absorption spectra for the first 20 excitations obtained with
 pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0). Peaks marked
-with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbitals.
-Excitation energies obtained with the pseudo-potentials were corrected by a factor 0.91}
+with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbitals.}
 \label{fig:cnhn_uv}
 \end{figure}
 
@@ -674,7 +670,7 @@ of the density at their position. Shown are the atom critical points (3, -3) (cy
 \includegraphics[width=7cm, height=7cm]{pyrene_peak2_ref_white}
 \includegraphics[width=7cm, height=7cm]{pyrene_peak2_ps_white}
 \end{center}
-\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each case, the electron is excited from the molecular orbital displayed in blue, to the orbital displayed in red.}
+\caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each transition, the electron density is decreased in the blue-coloured lobes and increased in the red.}
 \label{fig:transitiondensities}
 \end{figure}
 
