define ref bader

--- a/main.tex
+++ b/main.tex
@@ -320,7 +320,7 @@ This certainly shows again that the pseudo-carbon we have extracted captures a l
 %physically grounded.
  
 \subsection*{\sffamily \large Topological analysis of the density}
-A Bader analysis can be performed on the electronic density obtained with the pseudo-potentials.\cite{AIM}
+A Bader analysis can be performed on the electronic density obtained with the pseudo-potentials.\cite{bader}
 This gives a vision of the $\pi$-only electronic cloud.
 In the AIM framework, critical points are characterised by the sign of the eigenvalues of the hessian of 
 the electronic density and are classified as follows:
