change uv graph

--- a/main.tex
+++ b/main.tex
@@ -637,7 +637,7 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 6
 \begin{center}
-\includegraphics[width=16cm]{grand_rpa}
+\includegraphics[width=16cm]{grand_rpa_singlet}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
@@ -662,14 +662,16 @@ of the density at their position. Shown are the atom critical points (3, -3) (cy
 \end{figure}
 
 \begin{figure}
-\begin{center}
-\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ref_white}
-\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ps_white}
-
-\vspace{5mm}
-\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ref_white}
-\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ps_white}
-\end{center}
+\begin{tabular}{|c|c|}
+\hline
+\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ref_white} &
+\includegraphics[width=7cm, height=7cm]{pyrene_peak1_ps_white} \\
+\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ref_white} &
+\includegraphics[width=7cm, height=7cm]{pyrene_peak2_ps_white} \\
+\hline
+All electron & Pseudo-potential\\
+\hline
+\end{tabular}
 \caption{Transition densities of the first two (lowest-energy) pyrene absorption peaks, for singlet-singlet excitation spectra, as seen in Figure \ref{fig:cnhn_uv}, with all-electron spectra (left) and pseudo-molecule spectra (right). In each transition, the electron density is decreased in the blue-coloured lobes and increased in the red.}
 \label{fig:transitiondensities}
 \end{figure}
