change uv graph

--- a/main.tex
+++ b/main.tex
@@ -643,7 +643,8 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \hspace*{3in}
 \caption{Comparison of the absorption spectra for the first 20 excitations obtained with
 pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0). Peaks marked
-with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbitals.}
+with * cannot be reproduced by the pseudo-potentials as they imply $\sigma$ orbitals.
+Excitation energies obtained with the pseudo-potentials were corrected by a factor 0.91.}
 \label{fig:cnhn_uv}
 \end{figure}
 
