--- a/main.tex
+++ b/main.tex
@@ -305,8 +305,8 @@ As the pseudo-potential contains only $\pi$ orbitals, the excitations in the ref
 calculation which involve excitation from $\sigma$ to $\sigma$ orbitals cannot be reproduced 
 (these are denoted by a * above the peaks in the graphs).
 The overall agreement is very satisfactory.
-Excitation energies computed with the pseudo-potential are systematically lower a red shift of
-0.91 was used on the computed energies to match the reference spectra for the singlet.
+Excitation energies computed with the pseudo-potential are systematically too high, a red shift of
+0.91 was used on the computed excited energies to match the reference spectra for the singlet.
 for the singlet and by a very small amount for the triplet.
 This is a very pleasing surprise owing to the fact that the pseudo-potentials used
 to obtain these results were extracted on the first excited state of ethylene.
