--- a/main.tex
+++ b/main.tex
@@ -454,12 +454,23 @@ In this paper pseudo-potentials have been developed for sp$^{2}$-hybridised carb
 Their main features are that: 
 (1) They are fully atomic, meaning that they can be placed relative only to the carbon atom itself and the direction of its bonds. 
 (2) We could show that not only were the occupied orbitals well-reproduced by the use of these new potentials, but also that the virtual space is of good quality for excited states calculation. 
-They are able to reproduce basic electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra. 
+They are able to reproduce electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra and the electronic
+density leads to the same AIM view of the bonding pattern.
 (3) They can be employed with both Hartree-Fock and DFT methods including PBE0, PBE, TPSS and TPSSh functionals. 
-(4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)), or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
+(4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)),
+or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
 (5) They offer a significant gain in computational time as compared to all-electron calculations.
 
-Our work remains ongoing, and we envisage two areas for further development (1) We would like to create potentials that can successfully interact with neighbouring all-electron atoms. This will mean producing potentials which are capable of bonding covalently with their neighbours, i.e. adding another electron to the pseudo-carbon for every bonding, all-electron neighbouring atom. Such potentials could be useful as link atoms in QM/MM calculations, functioning similarly to Quantum Capping Potentials \cite{dilabio_simple_2002}, though this is not our primary motivation. (2) We would like further to test and to expand this work into a general method for increasing computational efficency in large systems in which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra. This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
+Our work remains ongoing, and we envisage two areas for further development
+(1) we are at the early stages of creating potentials that can successfully interact with neighbouring all-electron atoms.
+This will mean producing potentials which are capable of bonding covalently with their all-electron neighbours, i.e. adding another electron to the pseudo-carbon for every bonding.
+Our to be published preliminary results show that geometry optimization of the bond distances are possible.
+Such potentials could be useful as link atoms in QM/MM calculations, functioning similarly to Quantum Capping Potentials \cite{dilabio_simple_2002},
+though this is not our primary motivation.
+(2) We would like further to test and to expand this work into a general method for increasing computational efficiency in large systems in
+which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra.
+This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
+The challenge is 
 
 \section*{\sffamily \large Computational Details}
 
