conclude the conclusion

--- a/main.tex
+++ b/main.tex
@@ -470,7 +470,8 @@ though this is not our primary motivation.
 (2) We would like further to test and to expand this work into a general method for increasing computational efficiency in large systems in
 which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra.
 This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
-The challenge is 
+The challenge is to ensure the right occupation of the $\pi$-like orbitals despite the loss of the
+$\sigma-\pi$ separation.
 
 \section*{\sffamily \large Computational Details}
 
